EPMRPP-33139. Fixed double borders and error in console

--- a/app/src/pages/inside/dashboardItemPage/widgetsGrid/widget/widget.scss
+++ b/app/src/pages/inside/dashboardItemPage/widgetsGrid/widget/widget.scss
@@ -12,6 +12,6 @@
 .widget-header {
   background-color: $COLOR--white;
   height: 60px;
-  border: 1px solid $COLOR--gray-91;
+  border-bottom: 1px solid $COLOR--gray-91;
   cursor: all-scroll;
 }
