--- a/app/src/pages/inside/dashboardItemPage/widgetsGrid/widgetsGrid.scss
+++ b/app/src/pages/inside/dashboardItemPage/widgetsGrid/widgetsGrid.scss
@@ -1,5 +1,4 @@
 .widget-view {
-  border: 1px solid $COLOR--gray-91;
   display: flex;
   flex-direction: column;
 }
